# dpgp-techart-school

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  Makefile  README.md  dlus-guide.pur  ecosystem.config.js
.cargo/: config.toml
automate_rs/: Makefile
automate_rs/crates/bricks_n_mortar/: Cargo.toml
automate_rs/crates/bricks_n_mortar/src/: module.rs  user.rs
automate_rs/crates/dlus_serenity/: Cargo.toml
automate_rs/crates/dlus_serenity/src/: handler.rs  lib.rs
automate_rs/crates/dpgp_firestore/src/: query.rs
backend_rs/: .dockerignore  .gitignore
backend_rs/crates/bricks_n_mortar/: Cargo.toml
backend_rs/crates/bricks_n_mortar/src/: class.rs  module.rs  user.rs
backend_rs/crates/dlus_serenity/src/: lib.rs
backend_rs/crates/dpgp_firestore/src/: lib.rs  query.rs
backend_strapi/: README.md  ecosystem.config.js  package-lock.json  package.json
backend_strapi/config/env/production/: database.js
crates/bricks_n_mortar/: Cargo.toml
crates/bricks_n_mortar/src/: class.rs  lib.rs  module.rs  student.rs  user.rs
crates/dlus/: Cargo.toml
crates/dlus/src/: bot.rs  lib.rs  main.rs
crates/dlus/src/commands/: category.rs  meta.rs  mod.rs
crates/dlus_serenity/: Cargo.toml
crates/dlus_serenity/src/: db.rs  lib.rs  main.rs
crates/dlus_serenity/src/commands/: channel.rs  channels.rs  classes.rs  genesis.rs  inspect.rs  meta.rs  mod.rs  module.rs  modules.rs  students.rs  users.rs
crates/dpgp_firestore/: Cargo.toml
crates/dpgp_firestore/src/: lib.rs  main.rs  migration.rs  query.rs
crates/dpgp_firestore/src/migration/: mod.rs  modules_n_classes.rs  students_n_instructors.rs
crates/gui/: Cargo.toml
crates/gui/src/: lib.rs  main.rs
dlus_js/: .gitignore  .obsolete.commandkit.mjs  commandkit.mjs  moderator_config.js  package-lock.json  package.json
dlus_js/src/: cleanup.js  errands.js  firebase_config.js  index.js
dlus_js/src/commands/General/: list.js  list_products.js  list_slots.js  ping.js
dlus_js/src/commands/Management/: pair-student.js
dlus_js/src/commands/management/: announce.js  approve.js  consolidate.js  enroll.js  flag.js  flag_spam.js  migrate.js  query_approved.js  request.js  request_enrollment.js  review.js  review_enrollments.js  review_pending.js
dlus_js/src/events/messageCreate/: say-hi.js
dlus_js/src/events/ready/: ready.js
dlus_js/src/firebase/: firestore.js
dlus_js/src/firestore/: enrollments.js  mail_newsletter.js  mail_verification.js  send_mail.js  tickets.js
frontend/: README.md  firebase.json  firestore.rules  lesson_snippets.html  package-lock.json  package.json
frontend/migrations/: transfer_students.js
frontend/public/: favicon.psd  index.html
frontend/recaps/: DPRG_2023_wk1_recaps.html  DPRG_2023_wk2_recaps.html  DPRG_2023_wk3_recaps.html  DPRG_2023_wk8_recaps.html
frontend/src/: App.css  App.js  firebase_config.js  index.css  index.js  responsive.css
frontend/src/components/: Block.js  ClassList.js  CourseList.js  EnhancedMarkDown.js  Image.js  Navbar.js  Navbar.module.css  NotFound.js  Sketchfab.js  YouTube.js  vimeo.js
frontend/src/components/ContentBlock/: ContentBlock.js  ContentBlock.module.css
frontend/src/components/album/: Album.js  Album.module.css
frontend/src/components/logo/: InstagramLogo.js  LinkedInLogo.js
frontend/src/components/module/: LearningModule.js  Module.js  Module.module.css
frontend/src/components/navbar/: Navbar.js  Navbar.module.css
frontend/src/components/unit/: Unit.js  Unit.module.css
frontend/src/context/: AuthContext.js  CoursesContext.js  UsersContext.js
frontend/src/hooks/: useAuthContext.js  useCollection.js  useCollectionLength.js  useCoursesContext.js  useEmailLinkLogin.js  useFetchContents.js  useFetchModule.js  useGrantAccess.js  useLogin.js  useLogout.js  useMapModulesToCourses.js  useMigrate.js  useNavigateFirstUnit.js  usePasswordLogin.js  useQueryEnrollment.js  useSignup.js  useUsersContext.js
frontend/src/hooks/auth/: useAuthContext.js  usePasswordLogin.js  useUsersContext.js
frontend/src/hooks/firestore/: useCollection.js  useCollectionLength.js  useFetchContents.js  useFetchModule.js  useFetchPublicPage.js  useMapModulesToCourses.js  useNavigateFirstLesson.js  useNavigateFirstUnit.js
frontend/src/hooks/storage/: useListAll.js  useListAllDownloadURLs.js
frontend/src/pages/: AllNotes.js  StudyNote.js  StudyNoteDetail.js
frontend/src/pages/404/: 404.js  404.module.css
frontend/src/pages/about/: About.js  About.module.css
frontend/src/pages/admin/: Admin.js  Admin.module.css  DuplicateClass.js  DuplicateContent.js  DuplicateModule.js  GrantAccess.js  InsertContentBlock.js  InsertLesson.js  InsertLessonBlock.js  InsertUnit.js  InsertUnitContent.js  LessonBlock.module.css  LessonBlockForm.js  QueryEnrollment.js  UnlockUnit.js
frontend/src/pages/courseDetail/: CourseDetail.js  CourseDetail.module.css  CourseMetadata.js
frontend/src/pages/courses/: AllCourses.js  Courses.js  Courses.module.css
frontend/src/pages/dashboard/: Dashboard.js  Dashboard.module.css
frontend/src/pages/home/: Home.js  Home.module.css
frontend/src/pages/instructors/: Instructors.js  Instructors.module.css
frontend/src/pages/lesson/: Lesson.js  Lesson.module.css
frontend/src/pages/login/: FinishLogin.js  Login.js  Login.module.css
frontend_react/: .firebaserc  .gitignore  README.md  commandkit.mjs  firebase.json  firestore.rules  package-lock.json  package.json  rest.http  storage.rules
frontend_react/functions/: index.js  package-lock.json  package.json
frontend_react/migrations/: 2023_transfer_students.js  2025_copy_to_emulators.js  2025_firebase_admin.js  transfer_students.js
frontend_react/recaps/: DPRG_2023_wk11_recaps.html  DPRG_2023_wk12_recaps.html  DPRG_2023_wk4_recaps.html  DPRG_2023_wk5_recaps.html  DPRG_2023_wk7_recaps.html  DPRG_2023_wk9_recaps.html
frontend_react/src/: App.js  dlus_bot.js  firebase_config.js  index.js  responsive.css
frontend_react/src/components/: SocialLink.js
frontend_react/src/context/: AuthContext.js  CoursesContext.js
src/: main.rs
tmp/: convert.py
(+140 files in other folders)
