[workspace]
resolver = "2"

members = [
    "crates/bricks_n_mortar",
    "crates/dlus_serenity",
    "crates/dpgp_firestore",
]

[profile.dev]
opt-level = 1
# Faster debug builds on Mac, remember to comment out on Windows if using stable toolchain
split-debuginfo = "unpacked"

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
strip = true # Automatically strip symbols from the binary
# lto = true # VERY slightly smaller wasm
# opt-level = 's' # 10-20% smaller wasm compared to `opt-level = 3`
# opt-level = 1 # very slow and big wasm. Don't do this.
opt-level = 2 # fast and small wasm, basically same as `opt-level = 's'`
# opt-level = 3 # unecessarily large wasm for no performance gain
# debug = true # include debug symbols, useful when profiling wasm
codegen-units = 1 # Maximize size reduction optimizations
