[package]
name = "bricks-n-mortar"
version = "0.1.0"
description = "Central components of DPGP management, e.g., students, classes, etc."
edition = "2021"

[dependencies]
chrono = "0.4.24"
regex = "1.8.3"
serde = { version = "1.0.163", features = ["derive"] }
anyhow = "1.0.71"
# Needed for `serde` to work with `chrono` types.
firestore = "0.32.0"
