[package]
name = "dpgp-firestore"
version = "0.1.0"
edition = "2021"

[features]
default = ["sqlite"]
sqlite = ["sqlx"]

[dependencies]
bricks-n-mortar = { path = "../bricks_n_mortar" }

async-trait = "0.1.68"
firestore = "0.32.0"
futures = "0.3.28"
gcloud-sdk = { version = "0.20", features = ["google-firestore-v1"] }
sqlx = { version = "0.6.3", features = [
    "sqlite",
    "runtime-tokio-native-tls",
], optional = true }
# typemap_rev = "0.1.3"
# serde = { version = "1.0.163", features = ["derive"] }

[dev-dependencies]
# tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["full"] }
