[package]
name = "dpgp-firestore"
version = "0.1.0"
edition = "2021"

[features]
# for migrating from sqlite to firestore
sqlite = ["sqlx"]

[dependencies]
bricks-n-mortar = { path = "../bricks_n_mortar", features = ["firebase"] }

async-trait = "0.1.68"
firestore = "0.32.0"
futures = "0.3.28"
gcloud-sdk = { version = "0.20", features = ["google-firestore-v1"] }
sqlx = { version = "0.7.1", features = [
    "sqlite",
    "runtime-tokio-native-tls",
], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
