[package]
name = "gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dlus = { path = "../dlus" }

tokio = { version = "1.0", features = ["rt-multi-thread"] }
dotenv = "0.15.0"
eframe = "0.21.3"
crossbeam-channel = "0.5.7"
